# ai-curriculum-2026

./: CLAUDE.md  README.md
notes/week_reviews/: day_01.md
phase0-foundations/: main.py  pyproject.toml  verify_setup.py  wandb_hello.py
phase0-foundations/karpathy/01-micrograd/.ipynb_checkpoints/: micrograd_walkthrough-checkpoint.ipynb
phase0-foundations/wandb/: latest-run
phase0-foundations/wandb/run-20260420_141110-xlvo32nc/: run-xlvo32nc.wandb
phase0-foundations/wandb/run-20260420_141523-k1x7psl1/: run-k1x7psl1.wandb
phase0-foundations/wandb/run-20260420_141523-k1x7psl1/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
